test/return/at_top_level.lox
return "wat" // error: can't return from top-level code
